# LearnCpp

./: .gitignore  4Calculator.cpp  CF_4A.cpp  CF_71A.cpp
CMake_SFML_Template/: CMakeLists.txt
CelesteClone/: build.sh
CelesteClone/src/: celeste_lib.h  main.cpp
Platformer/: CMakeLists.txt
Platformer/assets/Tiles/: Tiles.tsx  level1.csv  level3.tmx
Platformer/src/: Game.cpp  Game.h  Global.h  Map.cpp  Map.h  Player.cpp  Player.h  SFMLOrthogonalLayer.hpp
Project P/: CMakeLists.txt  ToDoList.txt
Project P/assets/Tiles/: Tiles.txt  level1.tmj  level1.tmx  level2.tmx  level3.tmx  level4.tmx
Project P/src/: Animation.cpp  Animation.h  Game.cpp  Game.h  Global.h  Map.cpp  Map.h  Player.cpp  Player.h  Texture.cpp  Texture.h  Viewport.cpp  Viewport.h
